k8s/ingress/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector: 
    app:
        probes-app
  type: ClusterIP
  ports:
    - name: http   
      port: 80
      targetPort: 80
      protocol: TCP
...
