k8s/ingress/ingress-tls.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: tls-ingress
spec:
    tls:
        - hosts:
            - sslfoo.com
          secretName: secret-tls
...
