k8s/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  #annotations:
  #  nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"     
spec:
  rules:
      - host: my.s024888.mcs.slurm.io
        http:
          paths:
            - backend:
                service:
                  name: my-service
                  port:
                    number: 80
              pathType: Prefix
              path: "/"                  
...
